Fix side scroll issue on small screen size

--- a/index.css
+++ b/index.css
@@ -264,7 +264,6 @@ a:hover {
         float: left;
         margin-left: 10px;
         margin-right: 10px;
-        width: 100%;
         vertical-align: middle;
         margin-top: 0px;
         position: relative;
@@ -351,7 +350,6 @@ a:hover {
     #intro-content {
         margin-left: 10px;
         margin-right: 10px;
-        width: 100%;
         vertical-align: middle;
         margin-top: 40px;
     }
